--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "incremental": true,
-    "target": "es2022",
-    "module": "commonjs",
-    "lib": ["dom", "es2022"],
+    "target": "ES2022",
+    "module": "CommonJS",
+    "lib": ["dom", "ES2022"],
     "jsx": "react-jsx",
     "strict": true,
     "sourceMap": true,
