--- a/release/app/package.json
+++ b/release/app/package.json
@@ -14,5 +14,8 @@
     "postinstall": "npm run rebuild && npm run link-modules",
     "link-modules": "node -r ts-node/register ../../.erb/scripts/link-modules.ts"
   },
-  "dependencies": {}
+  "dependencies": {
+    "node-gyp": "^10.2.0",
+    "node-pty": "^1.0.0"
+  }
 }
